--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,8 +13,8 @@ layout: compress
     {% include nav.html %}
     <!-- Header -->
     <header class="header flex" role="banner">
-        <div class="container animated fadeIn">
-            <div class="row">
+        <div class="container animated fadeIn" opacity="0.6">
+            <div class="row" opacity="0.6">
                     <a href="{{ site.url }}">
                         <img src="{{ site.logo }}" class="img-circle zoombtn animated rotateIn">
                     </a>
