--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@ layout: compress
     {% include nav.html %}
     <!-- Header -->
     <header class="header flex" role="banner">
-        <div class="container animated fadeIn" opacity="0.6">
+        <div class="container animated fadeIn">
             <div class="row" opacity="0.6">
                     <a href="{{ site.url }}">
                         <img src="{{ site.logo }}" class="img-circle zoombtn animated rotateIn">
@@ -33,13 +33,13 @@ layout: compress
                   <hr class="hr-line">
                   <h3 class="title">
                          <a class="btn zoombtn" href="{{ site.url }}/about">
-                         我
+                         独白
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
-                         写
+                         文章
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/projects">
-                         做
+                         影像
                          </a>
                  </h3>
             </div>
