--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,9 +1,9 @@
 	<nav id="dl-menu" class="dl-menuwrapper" role="navigation">
-		<button class="dl-trigger">Open Menu</button>
+		<button class="dl-trigger">打开菜单</button>
 		<ul class="dl-menu">
 			<li><a href="{{ site.url }}/">首页</a></li>
 			<li>
-				<a href="#">我</a>
+				<a href="#">独白</a>
 				<ul class="dl-submenu">
 					<li>
 						<img src="{{ site.url }}/{{ site.logo }}" alt="{{ site.title }} photo" class="author-photo">
