--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,7 +45,7 @@ layout: compress
                 <a class="btn zoombtn" href="{{ site.url }}/projects">
                     影像
                 </a>
-                <a class="btn zoombtn" href="{{ site.url }}/projects">
+                <a class="btn zoombtn" href="{{ site.url }}/gallery">
                     影像
                 </a>
             </h3>
