--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -21,19 +21,13 @@ layout: compress
                         <i class="fa fa-home"></i>
                     </a>
                 </div>
+
+
                 <div class="post-list">
-                    {% for post in site.posts %}
-                    {% if post.project %}
-                    <ul>
-                        <li class="wow fadeInLeft" data-wow-duration="1.5s">
-                            <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
-                            <p>{{ post.excerpt }}</p>
-                            <a href="{{ site.url }}{{ post.url }}" class="btn zoombtn">Read More</a>
-                        </li>
-                    </ul>
-                    {% endif %}
-                    {% endfor %}
+                    This is gallery
                 </div>
+
+
             </div>
         </div>
     </header>
