--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -25,6 +25,57 @@ layout: compress
 
                 <div class="post-list">
                     This is gallery
+                    <section id="content" role="main">
+                        <div class="wrapper">
+
+                            <h2>{{page.title}}</h2>
+
+                            <!-- Gallery __-->
+                            <div class="gallery masonry-gallery">
+
+                                {% for image in page.images %}
+
+                                <figure class="gallery-item">
+                                    <figure class="effect-selena">
+                                        <header class='gallery-icon'>
+
+                                            <a href="{{ site.url }}{{ image.gallery-folder }}">
+                                                <img src="{{ site.url }}{{ image.image_path }}"></a>
+
+                                        </header>
+                                        <figcaption class='gallery-caption'>
+                                            <div class="entry-summary">
+                                                <h3>{{image.gallery-name}}</h3>
+                                                <p>{{image.gallery-date}}</p>
+                                            </div>
+                                        </figcaption>
+                                    </figure>
+                                </figure>
+
+                                {% endfor %}
+
+                            </div>
+
+                        </div><!-- END .wrapper -->
+                    </section>
+
+
+                    <!-- jQuery -->
+
+                    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+                    <script src="{{ site.url }}/js/retina.min.js"></script>
+                    <!-- include Masonry -->
+                    <script src="{{ site.url }}/js/isotope.pkgd.min.js"></script>
+                    <!-- include mousewheel plugins -->
+                    <script src="{{ site.url }}/js/jquery.mousewheel.min.js"></script>
+                    <!-- include carousel plugins -->
+                    <script src="{{ site.url}}/js/jquery.tinycarousel.min.js"></script>
+                    <!-- include svg line drawing plugin -->
+                    <script src="{{ site.url }}/js/jquery.lazylinepainter.min.js"></script>
+                    <!-- include custom script -->
+                    <script src="{{ site.url }}/js/scripts.js"></script>
+                    <!-- Modernizr -->
+                    <script src="{{ site.url }}/js/modernizr.js"></script>
                 </div>
 
 
