--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -1,6 +1,48 @@
 ---
 layout: compress
+title: "ALBUMS"
+description: "archive"
+active: gallery
+header-img: "assets/img/dali.jpg"
+images:
+- image_path: /gallery/albums/alb01.jpg
+gallery-folder: /gallery/gallery01/
+gallery-name: gallery1
+gallery-date: July 2015
+- image_path: /gallery/albums/alb02.jpg
+gallery-folder: /gallery/gallery02/
+gallery-name: gallery2
+gallery-date: June 2015
+- image_path: /gallery/albums/alb03.jpg
+gallery-folder: /gallery/gallery03/
+gallery-name: gallery3
+gallery-date: May 2015
+- image_path: /gallery/albums/alb04.jpg
+gallery-folder: /gallery/gallery04/
+gallery-name: gallery4
+gallery-date: April 2015
+- image_path: /gallery/albums/alb05.jpg
+gallery-folder: /gallery/gallery05/
+gallery-name: gallery5
+gallery-date: March 2015
+- image_path: /gallery/albums/alb06.jpg
+gallery-folder: /gallery/gallery06/
+gallery-name: gallery6
+gallery-date: February 2015
+- image_path: /gallery/albums/alb07.jpg
+gallery-folder: /gallery/gallery07/
+gallery-name: gallery7
+gallery-date: January 2015
+- image_path: /gallery/albums/alb08.jpg
+gallery-folder: /gallery/gallery08/
+gallery-name: gallery8
+gallery-date: December 2014
+- image_path: /gallery/albums/alb09.jpg
+gallery-folder: /gallery/gallery09/
+gallery-name: gallery9
+gallery-date: November 2014
 ---
+
 <!DOCTYPE html>
 <!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if (IE 7)&!(IEMobile)]><html class="no-js lt-ie9 lt-ie8"><![endif]-->
@@ -34,7 +76,6 @@ layout: compress
                             <div class="gallery masonry-gallery">
 
                                 {% for image in page.images %}
-
                                 <figure class="gallery-item">
                                     <figure class="effect-selena">
                                         <header class='gallery-icon'>
