--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,7 +44,8 @@
     <link rel="apple-touch-icon" sizes="144x144" href="{{ site.url }}/assets/img/favicons/apple-icon-144x144.png">
     <link rel="shortcut icon" type="image/png" href="{{ site.url }}/favicon.png" />
     <link rel="shortcut icon" href="{{ site.url }}/favicon.ico" />
-    <link rel="stylesheet" href="{{ " /css/selena.css " | prepend: site.url }}">
+    <link rel="stylesheet" href="https://longyintheworld.github.io/wandering/css/galleries.css">
+    <link rel="stylesheet" href= "https://longyintheworld.github.io/wandering/css/selena.css">
     <!-- Background Image -->
     {% if site.background %}
     {% capture background %}{{ site.background }}{% endcapture %}
