--- a/_includes/head.html
+++ b/_includes/head.html
@@ -66,15 +66,14 @@
     <link rel="icon" href="{{ site.baseurl }}/favicon.ico?" type="image/x-icon">
     <meta name="description" content="{{ site.description }}">
     <title>{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
-    <link rel="canonical" href="{{ page.url | replace:'index.html',''| prepend: site.url }}">
+    <link rel="canonical" href="{{ page.url | replace:'index.html',''| prepend: 'https://longyintheworld.github.io' }}">
     <!-- CSS -->
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="{{ " /css/bootstrap.min.css " | prepend: site.url }}">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ " /css/main.css " | prepend: site.url }}">
-    <link rel="stylesheet" href="{{ " /css/galleries.css " | prepend: site.url }}">
-    <link rel="stylesheet" href="{{ " /css/super-search.css " | prepend: site.url }}">
-    <link rel="stylesheet" href="{{ " /css/magnificpopup.css " | prepend: site.url }}">
+    <!--link rel="stylesheet" href="https://longyintheworld.github.io/wandering/css/bootstrap.min.css">
+    <!--link rel="stylesheet" href="https://longyintheworld.github.io/wandering/css/main.css">
+    <link rel="stylesheet" href="https://longyintheworld.github.io/wandering/css/galleries.css">
+    <link rel="stylesheet" href="https://longyintheworld.github.io/wandering/css/search.css">
+    <link rel="stylesheet" href=" https://longyintheworld.github.io/wandering/css/magnificpopup.css "-->
     <!-- Custom Fonts -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,600&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
