--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -46,8 +46,8 @@ layout: compress
                             <figure class="gallery-item">
                                 <figure class="effect-selena">
                                     <header class='gallery-icon'>
-                                        <a href="{{ image.gallery-folder }}">
-                                            <img src="{{ image.image_path }}"></a>
+                                        <a href="{{ site.url }}{{ image.gallery-folder }}">
+                                            <img src="{{ site.url }}{{ image.image_path }}"></a>
                                     </header>
                                     <figcaption class='gallery-caption'>
                                         <div class="entry-summary">
